--- a/templates/users.html
+++ b/templates/users.html
@@ -20,7 +20,7 @@
             <th>
                 <form action="/settings/users?action=deleteAccount&user_id={{ user['id'] }}" method="POST">
                     {% module xsrf_form_html() %}
-                    <input class="button" type="submit" onclick="return confirmation('Are you sure you want to delete this user? This will also delete any files uploaded by them');" value="Delete">
+                    <input class="danger" type="submit" onclick="return confirmation('Are you sure you want to delete this user? This will also delete any files uploaded by them');" value="Delete">
                 </form>
             </th>
         </tr>
