--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -4,7 +4,7 @@
 <h1>Gallery</h1>
 
 <div class="cards">
-   {% for file in files %}
+    {% for file in files %}
         <div class="card">
             <div class="thumbnail-container">
                 {% if file["filename"].split(".")[-1] in ("apng", "avif", "gif", "jpg", "jpeg", "png", "svg", "webp") %}
@@ -39,22 +39,60 @@
 </div>
 
 {% if not files %}
-    No files have been uploaded
+    No files have been uploaded yet.
 {% end %}
 
-<div class="pages">
-    <p>
-        {% if pages <= 3 and pages > 1 %}
-            {% for page in range(1, pages + 1) %}
-                <a class="page" href="/gallery?page={{ page }}">{{ page }}</a>
+{% if pages > 1 %}
+    <div class="pages">
+        <p>
+            {% if pages <= 3 %}
+                {% for page in range(1, pages + 1) %}
+                    <a class="page" href="/?page={{ page }}">{{ page }}</a>
+                {% end %}
+
+            {% else %}
+                {% if current_page > 1 %}
+                    <a class="page" href="/?page={{ current_page - 1 }}">Back</a>
+                {% else %}
+                    <a class="page-gray">Back</a>
+                {% end %}
+
+                {% if current_page == 1 %}
+                    <a class="page-selected">1</a>
+                    <a class="page" href="/?page=2">2</a>
+                    <a class="page-gray">...</a>
+                    <a class="page" href="/?page={{ pages }}">{{ pages }}</a>
+                {% elif current_page ==  2 %}
+                    <a class="page" href="/?page=1">1</a>
+                    <a class="page-selected">2</a>
+                    <a class="page-gray">...</a>
+                    <a class="page" href="/?page={{ pages }}">{{ pages }}</a>
+                {% elif current_page > 2 and current_page < pages - 1 %}
+                    <a class="page" href="/?page=1">1</a>
+                    <a class="page-gray">...</a>
+                    <a class="page-selected">{{ curren+t_page }}</a>
+                    <a class="page-gray">...</a>
+                    <a class="page" href="/?page={{ pages }}">{{ pages }}</a>
+                {% elif current_page == pages - 1 %}
+                    <a class="page" href="/?page=1">1</a>
+                    <a class="page-gray">...</a>
+                    <a class="page-selected">{{ current_page }}</a>
+                    <a class="page" href="/?page={{ pages }}">{{ pages }}</a>
+                {% else %}
+                    <a class="page" href="/?page=1">1</a>
+                    <a class="page-gray">...</a>
+                    <a class="page" href="/?page={{ pages - 1 }}">{{ pages - 1 }}</a>
+                    <a class="page-selected">{{ pages }}</a>
+                {% end %}
+
+                {% if current_page < pages %}
+                    <a class="page" href="/?page={{ current_page + 1 }}">Next</a>
+                {% else %}
+                    <a class="page-gray">Next</a>
+                {% end %}
             {% end %}
-        {% elif pages > 3 %}
-            <a class="page" href="/gallery?page=1">1</a>
-            <a class="page" href="/gallery?page=2">2</a>
-            <a class="page-gray">...</a>
-            <a class="page" href="/gallery?page={{ pages }}">{{ pages }}</a>
-        {% end %}
-    </p>
-</div>
+        </p>
+    </div>
+{% end %}
 
 {% end %}
